Changing mongo uri

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,5 +3,5 @@ spring:
     name: passenger-query-microservice
   data:
     mongodb:
-      uri: mongodb+srv://nuriamongodb:NoD7XFXMhzBWEZsb@cluster0.dmnaa.mongodb.net/
+      uri: mongodb+srv://nuriamongodb:NoD7XFXMhzBWEZsb@cluster0.dmnaa.mongodb.net/Workshop?retryWrites=true&w=majority
 
